# multi_navigation

./: .gitignore  CMakeCache.txt  README.md
src/adwa_local_planner/: CMakeLists.txt  package.xml
src/adwa_local_planner/cfg/: ADWAPlanner.cfg  DWAPlanner.cfg  adwa_planner_plugin.xml
src/adwa_local_planner/include/: adwa_planner.h  adwa_planner_ros.h
src/adwa_local_planner/include/adwa_local_planner/: ackerman_recovery.h  ackermann_odometry_helper.h  adwa_limits.h  adwa_planner.h  adwa_planner_ros.h  adwa_planner_utils.h  adwa_scored_sampling_planner.h  adwa_trajectory_sample_generator.h  adwa_utils.h  desired_direction_cost.h  fws_cost_function.h  goal_orientation_cost_function.h  heading_cost_function.h  min_turn_radius_cost.h  vertical_distance_cost.h
src/adwa_local_planner/launch/: adwa_diff_drive_in_stage.launch  dwa_diff_drive_in_stage.launch  eband_diff_drive_in_stage.launch  teb_diff_drive_in_stage.launch
src/adwa_local_planner/maps/: maze.yaml
src/adwa_local_planner/model/: maze_diff_drive.world
src/adwa_local_planner/param/: dwa_local_planner_params.yaml  eband_local_planner_params.yaml
src/adwa_local_planner/rviz/: adwa.rviz  dwa.rviz  eband.rviz
src/adwa_local_planner/src/: ackerman_recovery.cpp  ackermann_odometry_helper.cpp  adwa_planner.cpp  adwa_planner_ros.cpp  adwa_planner_utils.cpp  adwa_scored_sampling_planner.cpp  adwa_trajectory_sample_generator.cpp  desired_direction_cost.cpp  goal_orientation_cost_function.cpp  heading_cost_function.cpp  min_turn_radius_cost.cpp  showpath.cpp  tftest.cpp  vertical_distance_cost.cpp
src/eb_local_planner/: CMakeLists.txt  elp_plugin.xml  package.xml
src/eb_local_planner/include/eb_local_planner/: EBPlannerConfig.h  conversions_and_types.h  eb_local_planner.h  eb_local_planner_ros.h  eb_trajectory_controller.h  eb_visualization.h
src/eb_local_planner/src/: conversions_and_types.cpp  eb_local_planner.cpp  eb_local_planner_ros.cpp  eb_trajectory_controller.cpp  eb_visualization.cpp
src/fuzzy_controller/: CMakeLists.txt  package.xml
src/fuzzy_controller/include/fuzzy_controller/: my_fuzzy_controller.h
src/fuzzy_controller/src/: my_fuzzy_controller.cpp
src/fuzzy_controller/test/: test2.cpp
src/single_racecar_navigation/: CMakeLists.txt  README.md  package.xml
src/single_racecar_navigation/config/: ctrl.yaml  init_params.yaml  smart_control_config.yaml  waypoints.data
src/single_racecar_navigation/include/single_racecar_navigation/: gazebo_controller_manager.h  load_parameters.h  path_tracker.h  utils.h
src/single_racecar_navigation/launch/: gazebo_f1tenth.launch  gazebo_racecar.launch  gazebo_smart.launch  gmapping.launch  move_base_f1tenth.launch  move_base_racecar.launch  move_base_smart.launch  navigation_f1tenth.launch  navigation_racecar.launch  navigation_smart.launch  navigation_smart_test.launch  parking_gazebo.launch  slam_gmapping.launch  spawn_smart.launch
src/single_racecar_navigation/map/: plane.pgm  plane.yaml  plane_for_parall.pgm  plane_tiny.yaml  plane_with_obs.pgm  simple_parking_space_with_house.pgm  simple_parking_space_with_house.yaml  testmap1.pgm  testmap1.yaml
src/single_racecar_navigation/models/aaai94maze/: 94AAAIMAZEWithStaticObstacle.world  maze.yaml
src/single_racecar_navigation/models/circle_parking/: circle_parking.pgm  circle_parking.world  circle_parking.yaml  model.config  model.sdf
src/single_racecar_navigation/models/parallel_parking_space/: model.config  model.sdf  parallel_parking_space.pgm  parallel_parking_space.world  parallel_parking_space.yaml
src/single_racecar_navigation/models/park/: model.sdf  park.world
src/single_racecar_navigation/models/parking_space_half_build/: big_parking_space.pgm  big_parking_space.yaml  model.config  model.sdf
src/single_racecar_navigation/models/racecar/: racecar.urdf.xacro
src/single_racecar_navigation/models/single_parking_space/: model.config  model.sdf  single_parking_space.pgm  single_parking_space.yaml
src/single_racecar_navigation/models/tb3/: turtlebot3_burger.urdf.xacro
src/single_racecar_navigation/msg/: ParkingSpaceInfo.msg
src/single_racecar_navigation/param/: amcl_params.yaml  costmap_common_params_racecar.yaml  global_costmap_params.yaml  local_costmap_params.yaml  parameters_config.yaml  smoother_config_param.yaml
src/single_racecar_navigation/param/ackermann/: ackermann_local_planner_params_racecar.yaml
src/single_racecar_navigation/param/adwa/: adwa_local_planner_params_burger.yaml  adwa_local_planner_params_racecar.yaml
src/single_racecar_navigation/param/dwa/: dwa_local_planner_params_burger.yaml
src/single_racecar_navigation/param/dwb/: dwb_local_planner_params_burger.yaml
src/single_racecar_navigation/rviz/: f1tenth.rviz  racecars.rviz  smart.rviz  smart_test.rviz
src/single_racecar_navigation/scripts/: cmdvel2gazebo.py  cmdvel2gazebo_f1tenth.py  datashow.py  footprint_draw.py  gazebo_odometry.py  gazebo_odometry_f1tenth.py  keyboard_teleop.py  keyboard_teleop_f1tenth.py  keyboard_teleop_smart.py  odom_pub.py  transform_publisher.py
src/single_racecar_navigation/src/: data_record.cpp  draw_line.cpp  gazebo_controller_manager.cpp  parking_task_smart_test.cpp  run.cpp  task.cpp  task2.cpp  task3.cpp
src/single_racecar_navigation/worlds/: big_parking_space.world  parallel_parking_row.world  plane_with_obs.world  simple_parking_space_with_house.world  simple_parking_space_with_house_and_car.world  simple_parking_space_with_house_and_car_parallel.world  single_parking_space.world  testmap1.world  vertical_parking_row.world
src/smooth_global_planner/: CMakeLists.txt  bgp_plugin.xml  package.xml
src/smooth_global_planner/cfg/: SmoothGlobalPlanner.cfg
src/smooth_global_planner/include/utils/: utils.h
src/smooth_global_planner/src/: astar.cpp  dijkstra.cpp  gradient_path.cpp  grid_path.cpp  orientation_filter.cpp  path_smoother.cpp  plan_node.cpp  planner_core.cpp  quadratic_calculator.cpp  smoother_config.cc  smoother_config_loader.cpp
src/smooth_global_planner/test/: draw_path_with_mouse.py  path_point.txt  path_smoother_test.cpp  smoother_config_param.yaml
(+137 files in other folders)
