<?xml version="1.0"?>
<package format="2">
  <name>my_fuzzy_controller</name>
  <version>0.1.0</version>
  <description>The my_fuzzy_controller package</description>
  <maintainer email="gk.kingj@gmail.com">gk</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
