<?xml version="1.0"?>
<package format="2">
  <name>single_racecar_navigation</name>
  <version>0.0.0</version>
  <description>The teleop_nps package</description>

  <maintainer email="gk@todo.todo">gk</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>multi_turtlebot3_navigation</build_depend>
  <build_depend>parking_task</build_depend>
  <build_depend>Astar</build_depend>
  <build_depend>hybrid_a_star</build_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>multi_turtlebot3_navigation</exec_depend>
  <exec_depend>parking_task</exec_depend>
  <exec_depend>Astar</exec_depend>
  <exec_depend>hybrid_a_star</exec_depend>

  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>multi_turtlebot3_navigation</build_export_depend>
  <build_export_depend>parking_task</build_export_depend>
  <build_export_depend>Astar</build_export_depend>
  <build_export_depend>hybrid_a_star</build_export_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
